--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "app-gamedeals",
     "version": "0.1.0",
-    "homepage": "https://fserafa.github.io/gamedeals",
+    "homepage": "http://gamedeal.ga/",
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.29",
+        "@fortawesome/free-brands-svg-icons": "^5.13.1",
+        "@fortawesome/free-regular-svg-icons": "^5.13.1",
         "@fortawesome/free-solid-svg-icons": "^5.13.1",
         "@fortawesome/react-fontawesome": "^0.1.11",
         "@testing-library/jest-dom": "^4.2.4",
